Performance improvements (#1481)
FAIRPC-29:
- added extra materialized view for view-join relation to speed up join data loading
- fixed IT tests replacing H2 with postgres testcontainers